RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -217,6 +217,7 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 * MySQL : Repeatable Read 수준을 주로 사용
 
 ### 4.5.1 READ UNCOMMITTED
+* 각 트랜잭션의 변경 내용이 Commit, Rollback 여부에 상관없이 다른 트랜잭션에 보여진다.
 
 ### 4.5.2 READ COMMITTED
 
@@ -228,8 +229,8 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA4MTE5MTc2MCwxMzc5MjIzODAyLC0yMz
-g3MzMyNTUsMTA2Njg5NTQyNiwtMjE0MTQxNzEyNiwtMzMyNjYx
-NTEwLC02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcxNSwyMD
-U4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzOD
+czMzI1NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1
+MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNT
+gyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
