RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -218,6 +218,7 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 ### 4.5.1 READ UNCOMMITTED
 * 각 트랜잭션의 변경 내용이 Commit, Rollback 여부에 상관없이 다른 트랜잭션에 보여진다.
+![image](https://user-images.githubusercontent.com/45949748/114292701-5761d500-9acb-11eb-8030-ec95c0b7250e.png)
 
 ### 4.5.2 READ COMMITTED
 
@@ -229,8 +230,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzOD
-czMzI1NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1
-MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNT
-gyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbMTQwMjE5MTI2MSwyMDgxODEyMDEsMTM3OT
+IyMzgwMiwtMjM4NzMzMjU1LDEwNjY4OTU0MjYsLTIxNDE0MTcx
+MjYsLTMzMjY2MTUxMCwtNjE2MjExOTksNDQ5MTkzNzY5LDIwOT
+A2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0NCwxNTgyNDE5
+MjMwXX0=
 -->
