--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -220,9 +220,12 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 * 각 트랜잭션의 변경 내용이 Commit, Rollback 여부에 상관없이 다른 트랜잭션에 보여진다.
 ![image](https://user-images.githubusercontent.com/45949748/114292701-5761d500-9acb-11eb-8030-ec95c0b7250e.png)
 
-* 
+* 데이터가 나타났다가 사라지는 현상을 초래하여 개발자와 사용자를 상당히 혼란스럽게 만든다.
+* 사용하지 않는다.
 
 ### 4.5.2 READ COMMITTED
+* Oracle에서 기본적으로 사용하는 격리 수준. 온라인 서비스에서 가장 많이 선택되는 격리 수준.
+
 
 ### 4.5.3 REPEATABLE READ
 
@@ -232,9 +235,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc4MTU2MTQ4MSwxNDAyMTkxMjYxLDIwOD
-E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
-NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
-kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
-NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbODY3MDQzMzExLDE0MDIxOTEyNjEsMjA4MT
+gxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1NSwxMDY2ODk1NDI2
+LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OT
+E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
+NDQsMTU4MjQxOTIzMF19
 -->
