RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -225,6 +225,7 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 ### 4.5.2 READ COMMITTED
 * Oracle에서 기본적으로 사용하는 격리 수준. 온라인 서비스에서 가장 많이 선택되는 격리 수준.
+* <u>어떤 트랜잭션에서 데이터를 변경하더라도 COMMIT이 완료된 데이터만 다른 트랜잭션에서 조회할 수 있다.
 
 
 ### 4.5.3 REPEATABLE READ
@@ -235,7 +236,7 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODY3MDQzMzExLDE0MDIxOTEyNjEsMjA4MT
+eyJoaXN0b3J5IjpbNzk5MzYyMjc2LDE0MDIxOTEyNjEsMjA4MT
 gxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1NSwxMDY2ODk1NDI2
 LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OT
 E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
