RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -226,9 +226,12 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 ### 4.5.2 READ COMMITTED
 * Oracle에서 기본적으로 사용하는 격리 수준. 온라인 서비스에서 가장 많이 선택되는 격리 수준.
 * <u>어떤 트랜잭션에서 데이터를 변경하더라도 COMMIT이 완료된 데이터만 다른 트랜잭션에서 조회할 수 있다.
+![image](https://user-images.githubusercontent.com/45949748/114292804-351c8700-9acc-11eb-9296-f7f47cd740ba.png)
 
 
 ### 4.5.3 REPEATABLE READ
+![image](https://user-images.githubusercontent.com/45949748/114292817-49f91a80-9acc-11eb-8db0-f84b25aabf98.png)
+
 
 ### 4.5.4 SERIALIZABLE
 
@@ -236,9 +239,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzk5MzYyMjc2LDE0MDIxOTEyNjEsMjA4MT
-gxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1NSwxMDY2ODk1NDI2
-LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OT
-E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
-NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTEyNTc3OTA1MTAsMTQwMjE5MTI2MSwyMD
+gxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1LDEwNjY4OTU0
+MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjExOTksND
+Q5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIw
+NTU0NCwxNTgyNDE5MjMwXX0=
 -->
