--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -227,7 +227,10 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 * Oracle에서 기본적으로 사용하는 격리 수준. 온라인 서비스에서 가장 많이 선택되는 격리 수준.
 * <u>어떤 트랜잭션에서 데이터를 변경하더라도 COMMIT이 완료된 데이터만 다른 트랜잭션에서 조회할 수 있다.
 ![image](https://user-images.githubusercontent.com/45949748/114292804-351c8700-9acc-11eb-9296-f7f47cd740ba.png)
-
+* A가 empno 500000번의 이름을 Lara -> Toto로 변경
+	* Toto는 employees 테이블에 즉시 기록됨.
+	* Lara는 UNDO 영역에 백업됨.
+* B가 
 
 ### 4.5.3 REPEATABLE READ
 ![image](https://user-images.githubusercontent.com/45949748/114292817-49f91a80-9acc-11eb-8db0-f84b25aabf98.png)
@@ -239,9 +242,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNTc3OTA1MTAsMTQwMjE5MTI2MSwyMD
-gxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1LDEwNjY4OTU0
-MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjExOTksND
-Q5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIw
-NTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbNzg2NTM5NzYwLDE0MDIxOTEyNjEsMjA4MT
+gxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1NSwxMDY2ODk1NDI2
+LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OT
+E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
+NDQsMTU4MjQxOTIzMF19
 -->
