--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -232,10 +232,14 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 	* Lara는 UNDO 영역에 백업됨.
 * B가 empno 500000번의 이름을 조회하면 Lara로 조회됨. (A 커밋 전)
 	* UNDO 영역의 레코드 값을 가져옴.
-* UNDO 레코드는 InnoDB의 시스템 테이블 
+* UNDO 레코드는 InnoDB의 시스템 테이블 스페이스의 UNDO 영역에 기록됨.
+	* 트랜잭션 격리 수준 보장
+	* 트랜잭션 Rollback에 대한 복구에 사용
+* Non-Repeatable Read 부정합 문제
+![image](https://user-images.githubusercontent.com/45949748/114292817-49f91a80-9acc-11eb-8db0-f84b25aabf98.png)
+
 
 ### 4.5.3 REPEATABLE READ
-![image](https://user-images.githubusercontent.com/45949748/114292817-49f91a80-9acc-11eb-8db0-f84b25aabf98.png)
 
 
 ### 4.5.4 SERIALIZABLE
@@ -244,9 +248,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMyMzYxNTA2MSwxNDAyMTkxMjYxLDIwOD
-E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
-NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
-kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
-NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbMjAxMDk3NDg1LDE0MDIxOTEyNjEsMjA4MT
+gxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1NSwxMDY2ODk1NDI2
+LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OT
+E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
+NDQsMTU4MjQxOTIzMF19
 -->
