RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -236,6 +236,7 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 	* 트랜잭션 격리 수준 보장
 	* 트랜잭션 Rollback에 대한 복구에 사용
 * Non-Repeatable Read 부정합 문제
+	* <u>하나의 트랜잭션 내에서 똑같은 SELECT 쿼리를 실행했을 때 항상 같은 결과를 가져와야 한다</u>는 `REPEATABLE READ` 정합성을 지키지 못함.
 ![image](https://user-images.githubusercontent.com/45949748/114292817-49f91a80-9acc-11eb-8db0-f84b25aabf98.png)
 
 
@@ -248,9 +249,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAxMDk3NDg1LDE0MDIxOTEyNjEsMjA4MT
-gxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1NSwxMDY2ODk1NDI2
-LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OT
-E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
-NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTczNTU3MzQ5NiwxNDAyMTkxMjYxLDIwOD
+E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
+NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
+kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
+NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
