--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -235,10 +235,12 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 * UNDO 레코드는 InnoDB의 시스템 테이블 스페이스의 UNDO 영역에 기록됨.
 	* 트랜잭션 격리 수준 보장
 	* 트랜잭션 Rollback에 대한 복구에 사용
-* Non-Repeatable Read 부정합 문제
-	* <u>하나의 트랜잭션 내에서 똑같은 SELECT 쿼리를 실행했을 때 항상 같은 결과를 가져와야 한다</u>는 `REPEATABLE READ` 정합성을 지키지 못함.
+#### Non-Repeatable Read 부정합 문제
+* <u>하나의 트랜잭션 내에서 똑같은 SELECT 쿼리를 실행했을 때 항상 같은 결과를 가져와야 한다</u>는 `REPEATABLE READ` 정합성을 지키지 못함.
 ![image](https://user-images.githubusercontent.com/45949748/114292817-49f91a80-9acc-11eb-8db0-f84b25aabf98.png)
-
+* 일반적인 웹 프로그램에서는 크게 문제되지 않음.
+* 하나의 트랜잭션에서 동일 데이터를 여러번 읽고 변경하는 작업이 금전적인 처리와 연결되면 문제가 될 수 있음.
+* 입금/출그
 
 ### 4.5.3 REPEATABLE READ
 
@@ -249,7 +251,7 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTczNTU3MzQ5NiwxNDAyMTkxMjYxLDIwOD
+eyJoaXN0b3J5IjpbMTE5NjY1NzAwNywxNDAyMTkxMjYxLDIwOD
 E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
 NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
 kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
