--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -240,7 +240,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 ![image](https://user-images.githubusercontent.com/45949748/114292817-49f91a80-9acc-11eb-8db0-f84b25aabf98.png)
 * 일반적인 웹 프로그램에서는 크게 문제되지 않음.
 * 하나의 트랜잭션에서 동일 데이터를 여러번 읽고 변경하는 작업이 금전적인 처리와 연결되면 문제가 될 수 있음.
-* 입금/출그
+	* 입금/출금이 계속 진행되는 상황에서 오늘 입금된 금액의 총합을 조회하는 경우를 가정.
+	* 총합을 계산하는 쿼리가 실행될때마다 다른 결과를 가져옴.
+* SELECT의 트랜잭션 
 
 ### 4.5.3 REPEATABLE READ
 
@@ -251,9 +253,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE5NjY1NzAwNywxNDAyMTkxMjYxLDIwOD
-E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
-NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
-kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
-NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbLTEwMjIwMDEyNjUsMTQwMjE5MTI2MSwyMD
+gxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1LDEwNjY4OTU0
+MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjExOTksND
+Q5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIw
+NTU0NCwxNTgyNDE5MjMwXX0=
 -->
