--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -242,7 +242,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 * 하나의 트랜잭션에서 동일 데이터를 여러번 읽고 변경하는 작업이 금전적인 처리와 연결되면 문제가 될 수 있음.
 	* 입금/출금이 계속 진행되는 상황에서 오늘 입금된 금액의 총합을 조회하는 경우를 가정.
 	* 총합을 계산하는 쿼리가 실행될때마다 다른 결과를 가져옴.
-* SELECT의 트랜잭션 
+* SELECT의 트랜잭션 범위
+	* READ COMMITTED에서는 트랜잭션 내부/외부의 실행 결과가 차이가 없다.
+	* REPEATABLE READ에서는 SELECT 쿼리가 트랜잭션 범위 내에서만 작동함.
 
 ### 4.5.3 REPEATABLE READ
 
@@ -253,9 +255,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMjIwMDEyNjUsMTQwMjE5MTI2MSwyMD
-gxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1LDEwNjY4OTU0
-MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjExOTksND
-Q5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIw
-NTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbLTQ5MTE5NTgzNCwxNDAyMTkxMjYxLDIwOD
+E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
+NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
+kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
+NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
