--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -247,7 +247,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 	* REPEATABLE READ에서는 SELECT 쿼리가 트랜잭션 범위 내에서만 작동함.
 
 ### 4.5.3 REPEATABLE READ
-
+MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
+* 트랜잭션이 Rollback될 가능성에 대비해 변경되기 전의 레코드를 Undo 영역에 백업해두고 실제 레코드 값을 변경한다. (MVCC 방식, 3.2.6절, 124쪽)
+* 
 
 ### 4.5.4 SERIALIZABLE
 
@@ -255,9 +257,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ5MTE5NTgzNCwxNDAyMTkxMjYxLDIwOD
-E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
-NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
-kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
-NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbODYxOTQ0NTEzLDE0MDIxOTEyNjEsMjA4MT
+gxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1NSwxMDY2ODk1NDI2
+LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OT
+E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
+NDQsMTU4MjQxOTIzMF19
 -->
