--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -248,10 +248,16 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 ### 4.5.3 REPEATABLE READ
 MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
+
+#### Undo 영역
 * 트랜잭션이 Rollback될 가능성에 대비해 변경되기 전의 레코드를 Undo 영역에 백업해두고 실제 레코드 값을 변경한다. (MVCC 방식, 3.2.6절, 124쪽)
-* UNDO 영역의 데이터를 이용해서 동일 트랜잭션 내에서는 동일한 결과를 보여줌을 보장함.
+* Undo 영역의 데이터를 이용해서 동일 트랜잭션 내에서는 동일한 결과를 보여줌을 보장함.
 * Read Committed도 MVCC를 이용해 커밋되기 전의 데이터를 보여줌.
-* 차이는 언
+* 차이는 Undo 영역에 백업된 레코드의 여러 버전 중에 몇 번째 이전까지 찾아 들어가는가에 있다.
+
+#### MVCC 동작 방식
+* 모든 InnoDB의 트랜잭션은 고유한 트랜잭션 번호를 가짐.
+* Undo 영역
 
 ### 4.5.4 SERIALIZABLE
 
@@ -259,9 +265,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkyODQ5MjA0NywxNDAyMTkxMjYxLDIwOD
-E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
-NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
-kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
-NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbLTE4MTc4Njg2MjYsMTQwMjE5MTI2MSwyMD
+gxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1LDEwNjY4OTU0
+MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjExOTksND
+Q5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIw
+NTU0NCwxNTgyNDE5MjMwXX0=
 -->
