--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -257,7 +257,10 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 #### MVCC 동작 방식
 * 모든 InnoDB의 트랜잭션은 고유한 트랜잭션 번호를 가짐.
-* Undo 영역
+* Undo 영역에 백업된 모든 레코드는 변경을 발생시킨 레코드 번호가 포함됨.
+* Undo 영역의 데이터는 InnoDB 스토리지 엔진이 불필요하다고 판단하는 시점에 주기적으로 삭제함.
+* Repeatable Read 수준에서 MVCC를 보장하기 위해서는,
+	* 실행중인 가장 오래된 트랜잭션 번호보다 
 
 ### 4.5.4 SERIALIZABLE
 
@@ -265,9 +268,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MTc4Njg2MjYsMTQwMjE5MTI2MSwyMD
-gxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1LDEwNjY4OTU0
-MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjExOTksND
-Q5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIw
-NTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbMTc5MTE5NDI2MSwxNDAyMTkxMjYxLDIwOD
+E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
+NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
+kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
+NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
