--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -260,7 +260,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 * Undo 영역에 백업된 모든 레코드는 변경을 발생시킨 레코드 번호가 포함됨.
 * Undo 영역의 데이터는 InnoDB 스토리지 엔진이 불필요하다고 판단하는 시점에 주기적으로 삭제함.
 * Repeatable Read 수준에서 MVCC를 보장하기 위해서는,
-	* 실행중인 가장 오래된 트랜잭션 번호보다 
+	* 실행중인 가장 오래된 트랜잭션 번호보다 앞선(?) Undo 영역의 데이터는 삭제할 수 없다.
+	* 가장 오래된 트랜잭션 번호 이전의 트랜잭션에 의해 변경된 모든 Undo 데이터가 필요하지 않음.
+	* 
 
 ### 4.5.4 SERIALIZABLE
 
@@ -268,7 +270,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc5MTE5NDI2MSwxNDAyMTkxMjYxLDIwOD
+eyJoaXN0b3J5IjpbMjA0Njg5NDI5NCwxNDAyMTkxMjYxLDIwOD
 E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
 NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
 kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
