RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -262,6 +262,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 * Repeatable Read 수준에서 MVCC를 보장하기 위해서는,
 	* 실행중인 가장 오래된 트랜잭션 번호보다 앞선(?) Undo 영역의 데이터는 삭제할 수 없다.
 	* 가장 오래된 트랜잭션 번호 이전의 트랜잭션에 의해 변경된 모든 Undo 데이터가 필요하지 않음.
+	* 특정 트랜잭션 번호의 구간 내에서 백업된 Undo 데이터가 보존되어야 한다.
 	* 
 
 ### 4.5.4 SERIALIZABLE
@@ -270,7 +271,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA0Njg5NDI5NCwxNDAyMTkxMjYxLDIwOD
+eyJoaXN0b3J5IjpbMTI1NTI5NDg3NSwxNDAyMTkxMjYxLDIwOD
 E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
 NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
 kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
