--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -263,7 +263,15 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 	* 실행중인 가장 오래된 트랜잭션 번호보다 앞선(?) Undo 영역의 데이터는 삭제할 수 없다.
 	* 가장 오래된 트랜잭션 번호 이전의 트랜잭션에 의해 변경된 모든 Undo 데이터가 필요하지 않음.
 	* 특정 트랜잭션 번호의 구간 내에서 백업된 Undo 데이터가 보존되어야 한다.
+
+#### 작동 방식
+* A 트랜잭션 12번,
+	* 사원 이름을 Toto로 변경하고 커밋. 
+* B 트랜잭션 10번,
 	* 
+![image](https://user-images.githubusercontent.com/45949748/114293190-25527200-9acf-11eb-9b9a-0e8d07351968.png)
+
+
 
 ### 4.5.4 SERIALIZABLE
 
@@ -271,9 +279,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI1NTI5NDg3NSwxNDAyMTkxMjYxLDIwOD
-E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
-NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
-kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
-NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbNjIzMjU0Nzk0LDE0MDIxOTEyNjEsMjA4MT
+gxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1NSwxMDY2ODk1NDI2
+LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OT
+E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
+NDQsMTU4MjQxOTIzMF19
 -->
