RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -268,7 +268,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 * A 트랜잭션 12번,
 	* 사원 이름을 Toto로 변경하고 커밋. 
 * B 트랜잭션 10번,
-	* 
+	* A 트랜잭션이 변경 실행 전/후에 각각 SELECT를 수행.
+	* A가 커밋한 이후에도 Lara 값이 조회됨.
+	* 이는, 자신의 트랜잭션 번호 10번 이전의 
 ![image](https://user-images.githubusercontent.com/45949748/114293190-25527200-9acf-11eb-9b9a-0e8d07351968.png)
 
 
@@ -279,9 +281,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjIzMjU0Nzk0LDE0MDIxOTEyNjEsMjA4MT
-gxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1NSwxMDY2ODk1NDI2
-LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OT
-E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
-NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTExMzI5NjY0OTgsMTQwMjE5MTI2MSwyMD
+gxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1LDEwNjY4OTU0
+MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjExOTksND
+Q5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIw
+NTU0NCwxNTgyNDE5MjMwXX0=
 -->
