--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -273,7 +273,14 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 	* 이는, 자신의 트랜잭션 번호 10번 이전의 트랜잭션에서 변경한 것만 보게 된다.!
 ![image](https://user-images.githubusercontent.com/45949748/114293190-25527200-9acf-11eb-9b9a-0e8d07351968.png)
 
-한 사용자가 트랜잭션을 시작하고 오랜 시간동안 종료하지 않으면, Undo 영역의 데이터가 무한정 커질 수 있다. -> MySQL 
+한 사용자가 트랜잭션을 시작하고 오랜 시간동안 종료하지 않으면, Undo 영역의 데이터가 무한정 커질 수 있다. -> MySQL 서버의 처리 성능이 떨어짐.
+
+#### Phantom Read
+예)
+* A : insert 쿼리 수행
+* B : select .. for update 쿼리 수행
+
+
 
 ### 4.5.4 SERIALIZABLE
 
@@ -281,9 +288,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI3MTIxMjI1NSwxNDAyMTkxMjYxLDIwOD
-E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
-NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
-kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
-NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbLTE1MDc3NDY0NjksMTQwMjE5MTI2MSwyMD
+gxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1LDEwNjY4OTU0
+MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjExOTksND
+Q5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIw
+NTU0NCwxNTgyNDE5MjMwXX0=
 -->
