--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -280,6 +280,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 * A : insert 쿼리 수행
 * B : select .. for update 쿼리 수행
 
+![image](https://user-images.githubusercontent.com/45949748/114293322-115b4000-9ad0-11eb-8465-480cea31be39.png)
+
+
 
 
 ### 4.5.4 SERIALIZABLE
@@ -288,9 +291,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MDc3NDY0NjksMTQwMjE5MTI2MSwyMD
-gxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1LDEwNjY4OTU0
-MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjExOTksND
-Q5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIw
-NTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbMjA3MzEzNzkxOSwxNDAyMTkxMjYxLDIwOD
+E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
+NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
+kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
+NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
