--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -279,9 +279,10 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 예)
 * A : insert 쿼리 수행
 * B : select .. for update 쿼리 수행
-
+* B의 조회 결과에 A의 결과가 반영되는 현상.
 ![image](https://user-images.githubusercontent.com/45949748/114293322-115b4000-9ad0-11eb-8465-480cea31be39.png)
 
+* `SELECT .. FOR UPDATE` 쿼리는 select하는 
 
 
 
@@ -291,7 +292,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA3MzEzNzkxOSwxNDAyMTkxMjYxLDIwOD
+eyJoaXN0b3J5IjpbMTE4OTQzMDQ4NiwxNDAyMTkxMjYxLDIwOD
 E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
 NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
 kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
