RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -282,19 +282,22 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 * B의 조회 결과에 A의 결과가 반영되는 현상.
 ![image](https://user-images.githubusercontent.com/45949748/114293322-115b4000-9ad0-11eb-8465-480cea31be39.png)
 
-* `SELECT .. FOR UPDATE` 쿼리는 select하는 
-
-
+* `SELECT .. FOR UPDATE` 쿼리는 select하는 레코드에 잠금을 걸어야 하는데, Undo 레코드에는 잠금을 걸 수 없음.
+	* 따라서 이 경우에는 현재 레코드에서 값을 가져오게 된다.
+	* `SELECT .. FOR UPDATE` 
+	* `SELECT .. LOCK IN SHARE MODE` 
 
 ### 4.5.4 SERIALIZABLE
+* 가장 엄격한 격리 수준이다.
+* 순수한 SELECT 작업은 
 
 ### 4.5.5 REPEATABLE READ & READ COMMITTED 성능 비교
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE4OTQzMDQ4NiwxNDAyMTkxMjYxLDIwOD
-E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
-NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
-kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
-NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbNTg1NDg5MTQyLDE0MDIxOTEyNjEsMjA4MT
+gxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1NSwxMDY2ODk1NDI2
+LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OT
+E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
+NDQsMTU4MjQxOTIzMF19
 -->
