RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -292,15 +292,18 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 * 보통은 순수한 SELECT 작업은 아무런 레코드락을 설정하지 않는다.
 * 이 수준에서는 SELECT 작업 또한 Shread lock을 획득해야 한다.
 * 동시에 다른 트랜잭션은 해당 레코드에 대해서 변경을 못한다.
-* MySQL에 굳이 쓸 필요가 없다.
+* MySQL에서는 Phantom Read가 발생하지 않기 때문에, 굳이 쓸 필요가 없다.
 
 ### 4.5.5 REPEATABLE READ & READ COMMITTED 성능 비교
+* Undo 영역이 크게 늘어나지 않는 상황이라면 성능 차이는 거의 없다.
+* 30GB 테이블에서 2% 정도
+* 100GB 테이블에서 7% 정도
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDU1OTgwMDI3LDE0MDIxOTEyNjEsMjA4MT
-gxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1NSwxMDY2ODk1NDI2
-LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OT
-E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
-NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTEwMTg3Mzc2MCwxNDAyMTkxMjYxLDIwOD
+E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
+NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
+kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
+NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
