RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -17,8 +17,10 @@
 ### 4.2.4 Name Lock
 
 ## 4.3 MyISAM, Memory 스토리지 엔진의 Lock
+MyISAM, Memory 스토리지 엔진은 쿼리 단위로 필요한 Lock을 한꺼번에 모두 요청해서 획득(?)하기 때문에 데드락이 발생하지 않는다.
 
 ### 4.3.1 Lock 획득
+* 읽기 잠금 : 테이블에 쓰기 잠금이 걸려 있지 않으면 바로 읽기 잠금을 획득
 
 ### 4.3.2 Lock 튜닝
 
@@ -301,9 +303,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMTg3Mzc2MCwxNDAyMTkxMjYxLDIwOD
-E4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMyNTUsMTA2Njg5NTQy
-NiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0ND
-kxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1
-NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbMTIxOTc5NjAwMSwtMTAxODczNzYwLDE0MD
+IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
+NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
+YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
+NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
