RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -20,9 +20,15 @@
 MyISAM, Memory 스토리지 엔진은 쿼리 단위로 필요한 Lock을 한꺼번에 모두 요청해서 획득(?)하기 때문에 데드락이 발생하지 않는다.
 
 ### 4.3.1 Lock 획득
-* 읽기 잠금 : 테이블에 쓰기 잠금이 걸려 있지 않으면 바로 읽기 잠금을 획득
+* 읽기 잠금 : 테이블에 쓰기 잠금이 걸려 있지 않으면 바로 읽기 잠금을 획득하고 읽기 작업을 시작한다.
+* 쓰기 잠금 : 테이블에 아무런 잠금이 걸려있지 않아야만 쓰기 잠금을 획득할 수 있고, 그렇지 않다면 다른 잠금이 해제될 때까지 대기해야 한다.
 
 ### 4.3.2 Lock 튜닝
+```sql
+> SHOW STATUS LIKE 'Table%';
+Table_locks_immediate 1151552
+Table_locks_waited    15324
+```
 
 ### 4.3.3 테이블 수준의 Lock 확인 및 해제
 
@@ -303,7 +309,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIxOTc5NjAwMSwtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbMTYwMDI2ODM3NiwtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
