RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -31,9 +31,10 @@ Table_locks_waited    15324
 ```
 * Table_locks_immediate : 다른 잠금이 풀리기를 기다리지 않고 바로 잠금을 획득한 횟수(누적)
 * Table_locks_waited : 다른 잠금이 이미 해당 테이블을 사용하고 있어서 기다려야 했던 횟수(누적)
-* 잠금 대기 비율이 높다면 (W/(I+W)
+* 잠금 대기 비율(`W / (I+W) * 100`)이 높다면 경합이 많이 발생하므로 InnoDB로 변환하는걸 고려하자.
 
 ### 4.3.3 테이블 수준의 Lock 확인 및 해제
+* 테이블 단위의 잠금이므로, 
 
 ## 4.4 InnoDB 스토리지 엔진의 Lock
 
@@ -312,7 +313,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMDc2OTU1MTksLTEwMTg3Mzc2MCwxND
+eyJoaXN0b3J5IjpbLTE5Mzc5OTg4NjQsLTEwMTg3Mzc2MCwxND
 AyMTkxMjYxLDIwODE4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMy
 NTUsMTA2Njg5NTQyNiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC
 02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQy
