RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -34,7 +34,12 @@ Table_locks_waited    15324
 * 잠금 대기 비율(`W / (I+W) * 100`)이 높다면 경합이 많이 발생하므로 InnoDB로 변환하는걸 고려하자.
 
 ### 4.3.3 테이블 수준의 Lock 확인 및 해제
-* 테이블 단위의 잠금이므로, 
+* 테이블 단위의 잠금이므로 동시성이 떨어짐.
+* 테이블 잠금 획득의 명시적인 방법
+	* `LOCK TABLES table_name READ;`
+* 묵시적인 방법
+	* 쿼리가 실행되는 동안 잠금.
+* 
 
 ## 4.4 InnoDB 스토리지 엔진의 Lock
 
@@ -313,9 +318,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5Mzc5OTg4NjQsLTEwMTg3Mzc2MCwxND
-AyMTkxMjYxLDIwODE4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMy
-NTUsMTA2Njg5NTQyNiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC
-02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQy
-NTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbMTgyNzc5NjY0OSwtMTAxODczNzYwLDE0MD
+IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
+NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
+YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
+NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
