RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -39,7 +39,14 @@ Table_locks_waited    15324
 	* `LOCK TABLES table_name READ;`
 * 묵시적인 방법
 	* 쿼리가 실행되는 동안 잠금.
-* 
+* 테이블락 잠금 현황 조회
+```sql
+> SHOW OPEN TABLES FROM database_name LIKE 'table_name';
++-----------+-----------+--------+-------------+
+| Database  | Table     | In_use | Name_locked |
++-----------+-----------+--------+-------------+
+
+```
 
 ## 4.4 InnoDB 스토리지 엔진의 Lock
 
@@ -318,7 +325,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgyNzc5NjY0OSwtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbLTkyOTE3MDcyMCwtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
