--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -40,13 +40,16 @@ Table_locks_waited    15324
 * 묵시적인 방법
 	* 쿼리가 실행되는 동안 잠금.
 * 테이블락 잠금 현황 조회
-```sql
-> SHOW OPEN TABLES FROM database_name LIKE 'table_name';
-+-----------+-----------+--------+-------------+
-| Database  | Table     | In_use | Name_locked |
-+-----------+-----------+--------+-------------+
-
-```
+	```sql
+	> SHOW OPEN TABLES FROM database_name LIKE 'table_name';
+	+-----------+-----------+--------+-------------+
+	| Database  | Table     | In_use | Name_locked |
+	+-----------+-----------+--------+-------------+
+	| employees | employees |      3 |           0 |
+	+-----------+-----------+--------+-------------+
+	```
+	* In_use : 해당 테이블을 잠그고 있는 클라이언트의 수, 테이블의 잠금을 기다리는 수의 합
+* 
 
 ## 4.4 InnoDB 스토리지 엔진의 Lock
 
@@ -325,7 +328,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkyOTE3MDcyMCwtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbMTcxMjk1NzE3OCwtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
