RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -49,7 +49,8 @@ Table_locks_waited    15324
 	+-----------+-----------+--------+-------------+
 	```
 	* In_use : 해당 테이블을 잠그고 있는 클라이언트의 수, 테이블의 잠금을 기다리는 수의 합
-* 
+* 클라이언트 목록을 확인하려면 `SHOW PROCESSLIST` 명령을 사용. (p.177)
+* 클라이언트를 종료시키려면 `KILL QUERY client_id` 명령을 사용.
 
 ## 4.4 InnoDB 스토리지 엔진의 Lock
 
@@ -328,7 +329,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcxMjk1NzE3OCwtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbMTkyNTQ2MDQ5OSwtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
