RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -9,6 +9,10 @@
 ## 4.2 MySQL 엔진의 Lock
 
 ### 4.2.1 Global Lock
+* `FLUSH TABLES WITH READ LOCK` 명령으로만 획득 가능.
+* 가장 범위가 큰 락이다.
+* 한 세션에서 글로벌 락을 획득하면 다른 세션에서 SELECT를 제외한 대부분의 DDL, DML이 대기상태에 빠진다.
+* MySQL 서버 전체에 영향을 미치며, 
 
 ### 4.2.2 Table Lock
 
@@ -329,9 +333,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkyNTQ2MDQ5OSwtMTAxODczNzYwLDE0MD
-IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
-NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
-YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
-NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbMzYzMjEzOTkxLC0xMDE4NzM3NjAsMTQwMj
+E5MTI2MSwyMDgxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1
+LDEwNjY4OTU0MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNj
+E2MjExOTksNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2
+NywtMTAzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
 -->
