--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -12,12 +12,12 @@
 * `FLUSH TABLES WITH READ LOCK` 명령으로만 획득 가능.
 * 가장 범위가 큰 락이다.
 * 한 세션에서 글로벌 락을 획득하면 다른 세션에서 SELECT를 제외한 대부분의 DDL, DML이 대기상태에 빠진다.
-* 해당 락을 획득하기 위해서는 처리중인 모든 종류의 쿼리가 완료되어야 하며, 모든 데이터를 Flush하고 나서 ㅈ
+* 해당 락을 획득하기 위해서는 처리중인 모든 종류의 쿼리가 완료되어야 하며, 모든 데이터를 Flush하고 나서 잠금을 걸게 된다.
 * MySQL 서버 전체에 영향을 미치며, 대상 테이블이나 데이터베이스가 달라도 동일하게 영향을 미친다.
 * MyISAM, MEMORY 스토리지의 테이블에 대해서 mysqldump로 일관된 백업을 받을 때 해당 락을 사용한다.
-* 
 
 ### 4.2.2 Table Lock
+
 
 ### 4.2.3 User Lock
 
@@ -336,7 +336,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg2OTI1NDk1MiwtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbLTc3NzM1NTg1NiwtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
