RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -17,7 +17,13 @@
 * MyISAM, MEMORY 스토리지의 테이블에 대해서 mysqldump로 일관된 백업을 받을 때 해당 락을 사용한다.
 
 ### 4.2.2 Table Lock
-
+* 개별 테이블 단위로 설정되는 락.
+* 명시적, 묵시적 방법으로 락을 획득할 수 있다.
+* 명시적 획득/해제 방법
+	* `LOCK TABLES table name [READ I WRlTE ]`
+	* `UNLOCK TABLES`
+* 묵시적 획득/해제
+	* MyISAM, Memory 스토리지의 텡
 
 ### 4.2.3 User Lock
 
@@ -336,9 +342,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc3NzM1NTg1NiwtMTAxODczNzYwLDE0MD
-IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
-NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
-YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
-NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTEwMDc3MzkwOTYsLTEwMTg3Mzc2MCwxND
+AyMTkxMjYxLDIwODE4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMy
+NTUsMTA2Njg5NTQyNiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC
+02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQy
+NTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
