--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -23,7 +23,9 @@
 	* `LOCK TABLES table name [READ I WRlTE ]`
 	* `UNLOCK TABLES`
 * 묵시적 획득/해제
-	* MyISAM, Memory 스토리지의 텡
+	* MyISAM, Memory 스토리지의 테이블에 데이터를 변경하는 쿼리를 실행하면 발생함.
+	* 쿼리가 실행되는 동안에 자동으로 획득하고, 쿼리가 완료되면 자동 해제된다.
+	* InnoDB는 레코드 기반 락을 제공하므로, 테이블락이 설정되지 않는다.
 
 ### 4.2.3 User Lock
 
@@ -342,9 +344,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMDc3MzkwOTYsLTEwMTg3Mzc2MCwxND
-AyMTkxMjYxLDIwODE4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMy
-NTUsMTA2Njg5NTQyNiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC
-02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQy
-NTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbMTk4NDIzOTY0MiwtMTAxODczNzYwLDE0MD
+IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
+NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
+YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
+NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
