RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -28,6 +28,14 @@
 	* InnoDB는 레코드 기반 락을 제공하므로, 테이블락이 설정되지 않는다.
 
 ### 4.2.3 User Lock
+* `GET_LOCK('name', second)` 명령으로 임의 잠금을 설정한다.
+* 락 대상이 테이블이나 레코드 등의 데이터베이스 객체가 아니라, 사용자가 지정한 이름이다.
+```sql
+> SELECT GET_LOCK('mylock', 2);
+> SELECT IS_FREE_LOCK('mylock')
+> 
+```
+
 
 ### 4.2.4 Name Lock
 
@@ -344,7 +352,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk4NDIzOTY0MiwtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbMTI2MDY4MDAyOSwtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
