RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -31,11 +31,15 @@
 * `GET_LOCK('name', second)` 명령으로 임의 잠금을 설정한다.
 * 락 대상이 테이블이나 레코드 등의 데이터베이스 객체가 아니라, 사용자가 지정한 이름이다.
 ```sql
+-- 잠금이 사용중이면 2초동안 대기하며 락을 획득한다.
 > SELECT GET_LOCK('mylock', 2);
-> SELECT IS_FREE_LOCK('mylock')
-> 
+-- 잠금이 설정되어 있는지 확인.
+> SELECT IS_FREE_LOCK('mylock');
+-- 획득했던 잠금을 해제한다.
+> SELECT RELEASE_LOCK('mylock');
 ```
-
+* 위 명령 모두 정상적으로 락을 획득/해제하는 경우에는 1을 리턴
+* 실패하면 NULL, 0을 반환한다.
 
 ### 4.2.4 Name Lock
 
@@ -352,7 +356,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI2MDY4MDAyOSwtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbMTg0Mzc2NzYwOCwtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
