RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -38,10 +38,11 @@
 -- 획득했던 잠금을 해제한다.
 > SELECT RELEASE_LOCK('mylock');
 ```
-* 위 명령 모두 정상적으로 락을 획득/해제하는 경우에는 1을 리턴
+* 위 명령 모두 정상적으로 락을 획득/해제하는 경우에는 1을 반환.
 * 실패하면 NULL, 0을 반환한다.
 
 ### 4.2.4 Name Lock
+
 
 ## 4.3 MyISAM, Memory 스토리지 엔진의 Lock
 MyISAM, Memory 스토리지 엔진은 쿼리 단위로 필요한 Lock을 한꺼번에 모두 요청해서 획득(?)하기 때문에 데드락이 발생하지 않는다.
@@ -356,7 +357,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg0Mzc2NzYwOCwtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbMTg3NTYxNjU4OCwtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
