RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -42,6 +42,14 @@
 * 실패하면 NULL, 0을 반환한다.
 
 ### 4.2.4 Name Lock
+* 데이터베이스 객체(테이블, 뷰 등)의 이름을 변경하는 경우에 획득하는 잠금.
+* 명시적으로 획득하는 방법은 없다.
+* `RENAME TABLE tab_a TO tab_b`와 같이 테이블 이름을 변경할 때 자동으로 획득한다.
+
+```sql
+- 동시
+> RENAME TABLE rank TO rank_backup, rank_new TO rank;
+```
 
 
 ## 4.3 MyISAM, Memory 스토리지 엔진의 Lock
@@ -357,7 +365,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg3NTYxNjU4OCwtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbMTgyOTA2ODgxNywtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
