RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -47,8 +47,12 @@
 * `RENAME TABLE tab_a TO tab_b`와 같이 테이블 이름을 변경할 때 자동으로 획득한다.
 
 ```sql
-- 동시
+- 동시에 3개 테이블 이름에 대해서 락을 획득하고 처리함.
 > RENAME TABLE rank TO rank_backup, rank_new TO rank;
+
+- 나눠서 실행하면 짧은 시간동안 rank 테이블이 존재하지 않는 순간이 생기고, 쿼리가 실패할 수 있다.
+> RENAME TABLE rank TO rank_backup;
+> RENAME TABLE rank_new TO rank;
 ```
 
 
@@ -365,7 +369,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgyOTA2ODgxNywtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbMTk2OTk3ODc0OCwtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
