RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -1,4 +1,12 @@
 # 4. Transaction과 Lock
+* Lock
+	* 동시성을 제어하기 위한 기능
+	* 하나의 회원 정보 레코드를 여러 커넥션이 동시에 변경할 때 잠금이 없다면
+		* 동시에 변경해버리게 되고, 결과를 예측할 수 없게 된다.
+	* 
+* Transaction
+	* 데이터의 정합성을 보장하기 위한 기능
+
 
 ## 4.1 트랜잭션
 
@@ -369,7 +377,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk2OTk3ODc0OCwtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbLTIwMjk1OTkzNCwtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
