--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -3,10 +3,11 @@
 	* 동시성을 제어하기 위한 기능
 	* 하나의 회원 정보 레코드를 여러 커넥션이 동시에 변경할 때 잠금이 없다면
 		* 동시에 변경해버리게 되고, 결과를 예측할 수 없게 된다.
-	* 
+	* 여러 커넥션에서 동시에 동일 자원을 요청할 경우 순서대로 한 시점에 하나의 커넥션만 변경할 수 있게 해준다.
 * Transaction
 	* 데이터의 정합성을 보장하기 위한 기능
-
+* Isolation Level
+	* 하나의 트랜잭션 내에서 또는 여러 트랜잭션 간의 작업 내용을 어떻게 공유하고 차단할 것인지를 결정하는 레벨.
 
 ## 4.1 트랜잭션
 
@@ -377,7 +378,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMjk1OTkzNCwtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbMTAxOTE3OTM4NiwtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
