--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -10,6 +10,8 @@
 	* 하나의 트랜잭션 내에서 또는 여러 트랜잭션 간의 작업 내용을 어떻게 공유하고 차단할 것인지를 결정하는 레벨.
 
 ## 4.1 트랜잭션
+* MyISAM, Memory 스토리지 엔진은 트랜잭션을 지원하지 않는다.
+* InnoDB 스토리지 엔진은 트랜잭션을 지원한다.
 
 ### 4.1.1 MySQL의 트랜잭션
 
@@ -378,9 +380,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAxOTE3OTM4NiwtMTAxODczNzYwLDE0MD
-IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
-NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
-YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
-NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbOTEyMTQyMTI1LC0xMDE4NzM3NjAsMTQwMj
+E5MTI2MSwyMDgxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1
+LDEwNjY4OTU0MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNj
+E2MjExOTksNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2
+NywtMTAzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
 -->
