RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -16,6 +16,11 @@
 ### 4.1.1 MySQL의 트랜잭션
 
 ### 4.1.2 주의사항
+#### 트랜잭션 범위 설정
+* 가능하면 짧게 가져가라.
+* Connection Pool에 관리되는 커넥션은 유한한 자원이다.
+* I/O 작업이 있으면
+
 
 ## 4.2 MySQL 엔진의 Lock
 
@@ -380,9 +385,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTEyMTQyMTI1LC0xMDE4NzM3NjAsMTQwMj
-E5MTI2MSwyMDgxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1
-LDEwNjY4OTU0MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNj
-E2MjExOTksNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2
-NywtMTAzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbLTE1MzYwMTkyODksLTEwMTg3Mzc2MCwxND
+AyMTkxMjYxLDIwODE4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMy
+NTUsMTA2Njg5NTQyNiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC
+02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQy
+NTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
