--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -14,13 +14,14 @@
 * InnoDB 스토리지 엔진은 트랜잭션을 지원한다.
 
 ### 4.1.1 MySQL의 트랜잭션
+트랜잭션은 하나의 논리적인 작업 셋에 하나의 쿼리가 있든 두 개 이상의 쿼리가 있든 관계없이 논리적인 작업 셋 자체가 100% 적용되거나(Commit) 또는 아무것도 적용되지 않아야 함
 
 ### 4.1.2 주의사항
-#### 트랜잭션 범위 설정
+#### 트랜잭션 범위 설정 (p.169)
 * 가능하면 짧게 가져가라.
 * Connection Pool에 관리되는 커넥션은 유한한 자원이다.
-* I/O 작업이 있으면
-
+* 중간에 I/O 작업이 있으면 트랜잭션을 분리하자.
+* 단순 조회의 경우에는 트랜잭션에 포함시키지 않아도 된다.
 
 ## 4.2 MySQL 엔진의 Lock
 
@@ -385,9 +386,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MzYwMTkyODksLTEwMTg3Mzc2MCwxND
-AyMTkxMjYxLDIwODE4MTIwMSwxMzc5MjIzODAyLC0yMzg3MzMy
-NTUsMTA2Njg5NTQyNiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC
-02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQy
-NTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbMTg3NjI3Mzk5LC0xMDE4NzM3NjAsMTQwMj
+E5MTI2MSwyMDgxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1
+LDEwNjY4OTU0MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNj
+E2MjExOTksNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2
+NywtMTAzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
 -->
