RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -14,7 +14,11 @@
 * InnoDB 스토리지 엔진은 트랜잭션을 지원한다.
 
 ### 4.1.1 MySQL의 트랜잭션
-트랜잭션은 하나의 논리적인 작업 셋에 하나의 쿼리가 있든 두 개 이상의 쿼리가 있든 관계없이 논리적인 작업 셋 자체가 100% 적용되거나(Commit) 또는 아무것도 적용되지 않아야 함
+트랜잭션은 하나의 논리적인 작업 셋에 하나의 쿼리가 있든 두 개 이상의 쿼리가 있든 관계없이 논리적인 작업 셋 자체가 100% 적용되거나(Commit) 또는 아무것도 적용되지 않아야 함(Rollback)을 보장해주는 것.
+
+#### MyISAM과 InnoDB의 트랜잭션 실패 시 처리결과 (p.167)
+* 하나의 쿼리에 3개 레코드를 insert하는 동작에서 3번째 레코드 중복으로 에러가 났을 때
+	* MyISAM은 
 
 ### 4.1.2 주의사항
 #### 트랜잭션 범위 설정 (p.169)
@@ -386,7 +390,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg3NjI3Mzk5LC0xMDE4NzM3NjAsMTQwMj
+eyJoaXN0b3J5IjpbNTk4MjYyODg5LC0xMDE4NzM3NjAsMTQwMj
 E5MTI2MSwyMDgxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1
 LDEwNjY4OTU0MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNj
 E2MjExOTksNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2
