RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -18,7 +18,10 @@
 
 #### MyISAM과 InnoDB의 트랜잭션 실패 시 처리결과 (p.167)
 * 하나의 쿼리에 3개 레코드를 insert하는 동작에서 3번째 레코드 중복으로 에러가 났을 때
-	* MyISAM은 
+	* MyISAM은 1,2번째 insert가 롤백되지 않고 반영 되어 있음. (partial update 발생)
+	* InnoDB는 1,2번째 insert가 롤백되어 반영되지 않음.
+
+#### 트랜잭션이 지원되지 않는 상황에서 롤백 예외처
 
 ### 4.1.2 주의사항
 #### 트랜잭션 범위 설정 (p.169)
@@ -390,9 +393,9 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTk4MjYyODg5LC0xMDE4NzM3NjAsMTQwMj
-E5MTI2MSwyMDgxODEyMDEsMTM3OTIyMzgwMiwtMjM4NzMzMjU1
-LDEwNjY4OTU0MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNj
-E2MjExOTksNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2
-NywtMTAzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbMTc1NzA4MTM5NSwtMTAxODczNzYwLDE0MD
+IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
+NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
+YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
+NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
