RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -21,7 +21,8 @@
 	* MyISAM은 1,2번째 insert가 롤백되지 않고 반영 되어 있음. (partial update 발생)
 	* InnoDB는 1,2번째 insert가 롤백되어 반영되지 않음.
 
-#### 트랜잭션이 지원되지 않는 상황에서 롤백 예외처
+#### 트랜잭션이 지원되지 않는 상황에서 롤백 예외처리 코드 (p.168)
+* if-else 지옥맛이다.
 
 ### 4.1.2 주의사항
 #### 트랜잭션 범위 설정 (p.169)
@@ -393,7 +394,7 @@ MySQL InnoDB 스토리지 엔진의 기본 격리 수준.
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc1NzA4MTM5NSwtMTAxODczNzYwLDE0MD
+eyJoaXN0b3J5IjpbMTA4OTExMDE2MiwtMTAxODczNzYwLDE0MD
 IxOTEyNjEsMjA4MTgxMjAxLDEzNzkyMjM4MDIsLTIzODczMzI1
 NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLT
 YxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1
