RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -1,7 +1,12 @@
 
-
+## 디스크 읽기 방식
+### 저장 매체
+* 데이터를 저장할 수 있는 매체
+	* 내장 디스크
+	* DAS (Direct Attached Storage)
+	* NA
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbNTM2NDQzNDUxXX0=
 -->
