--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -4,9 +4,13 @@
 * 데이터를 저장할 수 있는 매체
 	* 내장 디스크
 	* DAS (Direct Attached Storage)
-	* NA
+		* disk 만 존재. 컴퓨터에 연결해서 사용
+		* 여러 컴퓨터 
+	* NAS (Network Attached Storage)
+	* SAN (Storage Area Network)
+* 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTM2NDQzNDUxXX0=
+eyJoaXN0b3J5IjpbLTEzNzcwMjMxNzNdfQ==
 -->
