RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -5,12 +5,17 @@
 	* 내장 디스크
 	* DAS (Direct Attached Storage)
 		* disk 만 존재. 컴퓨터에 연결해서 사용
-		* 여러 컴퓨터 
+		* 한 컴퓨터에만 연결할 수 있음 (여러 컴퓨터 공유 불가능)
 	* NAS (Network Attached Storage)
+		* 컴퓨터와 tcp/ip 를 통해 연결됨
+		* 직접 연결 보다는 속도가 느림
 	* SAN (Storage Area Network)
+		* 광케이블롸 컴퓨터 본체와 연결
+		* 여러 컴퓨터에서 접근 가능
+		* 빠르지만, 비용이 많이 듦
 * 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNzcwMjMxNzNdfQ==
+eyJoaXN0b3J5IjpbLTEwNTk1NjYxMTNdfQ==
 -->
