RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -1,4 +1,5 @@
 
+# 인덱스
 ## 디스크 읽기 방식
 ### 저장 매체
 * 데이터를 저장할 수 있는 매체
@@ -13,9 +14,9 @@
 		* 광케이블롸 컴퓨터 본체와 연결
 		* 여러 컴퓨터에서 접근 가능
 		* 빠르지만, 비용이 많이 듦
+### 디스크 드라이브와 솔리드 스테이트 드라이브 (SSD)
 * 
 
-> Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNTk1NjYxMTNdfQ==
+eyJoaXN0b3J5IjpbLTc2NTQ0MzE4OSwtMTA1OTU2NjExM119
 -->
