RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -15,8 +15,12 @@
 		* 여러 컴퓨터에서 접근 가능
 		* 빠르지만, 비용이 많이 듦
 ### 디스크 드라이브와 솔리드 스테이트 드라이브 (SSD)
+* SSD
+	* 전자식 저장 매체
+	* 기존 기계식 저장 매체인 디스크 대체용
+	* DAS, SAN 에 그대로 이용 가능
 * 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc2NTQ0MzE4OSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbMTI1MjE0MjI5OCwtMTA1OTU2NjExM119
 -->
