RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -19,8 +19,10 @@
 	* 전자식 저장 매체
 	* 기존 기계식 저장 매체인 디스크 대체용
 	* DAS, SAN 에 그대로 이용 가능
+	* 랜덤 I/O 에서 특히 디스크보다 성능이 빠르다
+### 랜덤 I/O 와 순차 I/O
 * 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI1MjE0MjI5OCwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
 -->
