RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -22,7 +22,7 @@
 	* 랜덤 I/O 에서 특히 디스크보다 성능이 빠르다
 ### 랜덤 I/O 와 순차 I/O
 * 
-
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMD
+U5NTY2MTEzXX0=
 -->
