RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -21,8 +21,8 @@
 	* DAS, SAN 에 그대로 이용 가능
 	* 랜덤 I/O 에서 특히 디스크보다 성능이 빠르다
 ### 랜덤 I/O 와 순차 I/O
-* 
+* 3개의 페이지 (16ㅌ3kb) 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMD
-U5NTY2MTEzXX0=
+eyJoaXN0b3J5IjpbNjU0NDkyNTU2LDEyNTUwOTU1NzEsMTI5ND
+YxOTI2NSwtMTA1OTU2NjExM119
 -->
