RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -21,8 +21,13 @@
 	* DAS, SAN 에 그대로 이용 가능
 	* 랜덤 I/O 에서 특히 디스크보다 성능이 빠르다
 ### 랜덤 I/O 와 순차 I/O
-* 3개의 페이지 (16ㅌ3kb) 
+* 3개의 페이지 (16x3kb) 를 디스크에 기록하기 위해 
+	* 순차 I/O는 1번 시스템 콜 요청
+	* 랜덤 I/O 는 3번 요청
+	* 랜던 I/O 작업이 훨씬 부하가 큼
+* 쿼리 튜닝 = 랜덤 I/O 줄이는 것이 목적
+### 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjU0NDkyNTU2LDEyNTUwOTU1NzEsMTI5ND
-YxOTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbMTQ1NjgwMjM4NSwxMjU1MDk1NTcxLDEyOT
+Q2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
