RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -26,8 +26,14 @@
 	* 랜덤 I/O 는 3번 요청
 	* 랜던 I/O 작업이 훨씬 부하가 큼
 * 쿼리 튜닝 = 랜덤 I/O 줄이는 것이 목적
+
+> 참고
+> * 인덱스 레인지 스캔 : 데이터를 읽기 위해 주로 랜덤 I/O 사용
+> * 풀 테이블 스캔 : 순차 I/O 사용
+> * 큰 테이블의 레코드 대부분을 읽는 작업에서는 인덱스 사용하지 않고 풀 테이블 스캔을 사용하도로
+
 ### 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ1NjgwMjM4NSwxMjU1MDk1NTcxLDEyOT
-Q2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
+eyJoaXN0b3J5IjpbLTE3NTY3NDI4NTUsMTI1NTA5NTU3MSwxMj
+k0NjE5MjY1LC0xMDU5NTY2MTEzXX0=
 -->
