--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -30,10 +30,12 @@
 > 참고
 > * 인덱스 레인지 스캔 : 데이터를 읽기 위해 주로 랜덤 I/O 사용
 > * 풀 테이블 스캔 : 순차 I/O 사용
-> * 큰 테이블의 레코드 대부분을 읽는 작업에서는 인덱스 사용하지 않고 풀 테이블 스캔을 사용하도로
+> * 큰 테이블의 레코드 대부분을 읽는 작업에서는 인덱스 사용하지 않고 풀 테이블 스캔을 사용하도록 유도할 때도 있음
 
-### 
+## 인덱스란?
+* 인덱스는 컬럼의 값을 주어진 순서로 미리 정렬하여 보관함
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NTY3NDI4NTUsMTI1NTA5NTU3MSwxMj
-k0NjE5MjY1LC0xMDU5NTY2MTEzXX0=
+eyJoaXN0b3J5IjpbMTE4NzE2Njk5NywxMjU1MDk1NTcxLDEyOT
+Q2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
