RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -34,8 +34,10 @@
 
 ## 인덱스란?
 * 인덱스는 컬럼의 값을 주어진 순서로 미리 정렬하여 보관함
-* 
+* 비유
+	* sortedList인덱스. 저장된 값들을 항상 정렬 상태로 저장/유지
+	* arrayList = 데이터 파일. 저장되는 순서로 저장
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE4NzE2Njk5NywxMjU1MDk1NTcxLDEyOT
-Q2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
+eyJoaXN0b3J5IjpbLTIwODIxODM3OTgsMTE4NzE2Njk5NywxMj
+U1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
