RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -38,10 +38,13 @@
 	* sortedList
 		* 인덱스. 저장된 값들을 항상 정렬 상태로 저장/유지
 		* 저장 : 저장할 떄마다 정렬해야해서 복잡하고 느림
-		* 찾기 : 이미 정렬되어 있으므로 빠
+		* 찾기 : 이미 정렬되어 있으므로 빠름
+		* **인덱스도 insert / update /delete 문장의 처리가 느림**
+		* 주의 : select 쿼리 문장의 where 절의 
 	* arrayList
 		* 데이터 파일. 저장되는 순서로 저장
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI3MzE5NzI0MSwxMTg3MTY2OTk3LDEyNT
-UwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbLTE1NzA0NzY3NzAsMTE4NzE2Njk5NywxMj
+U1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
