--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -40,11 +40,14 @@
 		* 저장 : 저장할 떄마다 정렬해야해서 복잡하고 느림
 		* 찾기 : 이미 정렬되어 있으므로 빠름
 		* **인덱스도 insert / update /delete 문장의 처리가 느림**
-		* 주의 : select 쿼리 문장의 where 절의 
+			* 즉, s*elect 쿼리 문장의 where 절에 사용된다고 전부 인덱스로 생성하면 데이터 저장 성능이 떨어지고, 인덱스 크기가 비대해져 역효과*
 	* arrayList
 		* 데이터 파일. 저장되는 순서로 저장
+* 인덱스 분류
+	* 분류 방법 : 데이터를 관리하는 방식 (알고리즘) / 중복 값의 허용 여부 등
+	* (저자의 임
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NzA0NzY3NzAsMTE4NzE2Njk5NywxMj
-U1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
+eyJoaXN0b3J5IjpbMTYwMDEyMzc1MywxMTg3MTY2OTk3LDEyNT
+UwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
 -->
