RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -43,11 +43,17 @@
 			* 즉, s*elect 쿼리 문장의 where 절에 사용된다고 전부 인덱스로 생성하면 데이터 저장 성능이 떨어지고, 인덱스 크기가 비대해져 역효과*
 	* arrayList
 		* 데이터 파일. 저장되는 순서로 저장
-* 인덱스 분류
+* 인덱스 분류 (저자의 임의 분류)
 	* 분류 방법 : 데이터를 관리하는 방식 (알고리즘) / 중복 값의 허용 여부 등
-	* (저자의 임
+	* 인덱스를 역할별로 분류
+		* 프라이머리 키 (primary key)
+			* 그 레코드를 대표하는 컬럼의 값으로 만들어진 인덱스
+			* 식별자라고도 불림
+			* null 과 중복을 허용하지 않음
+		* 보조키 (secondary key)
+			* 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYwMDEyMzc1MywxMTg3MTY2OTk3LDEyNT
+eyJoaXN0b3J5IjpbLTQ1MDcyMjU2MiwxMTg3MTY2OTk3LDEyNT
 UwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
 -->
