RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -51,9 +51,18 @@
 			* 식별자라고도 불림
 			* null 과 중복을 허용하지 않음
 		* 보조키 (secondary key)
-			* 
+			* 프라이머리 키를 제외한 나머지 모든 인덱스
+			* 유니크 인덱스
+				* 프라이머리 키와 비슷
+				* 프리이머리 키 대체 가능
+				* 대체키라고도 함
+	* 데이터 저장 방식(알고리즘) 별 분류 (대표적인 것들만 나열함)
+		* B-Tree 인덱스
+			* 가장 일반적으로 사용됨
+			* 커럼
+		* Hash 인덱스
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ1MDcyMjU2MiwxMTg3MTY2OTk3LDEyNT
-UwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbLTExODIxODI1NjksMTE4NzE2Njk5NywxMj
+U1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
