RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -59,10 +59,17 @@
 	* 데이터 저장 방식(알고리즘) 별 분류 (대표적인 것들만 나열함)
 		* B-Tree 인덱스
 			* 가장 일반적으로 사용됨
-			* 커럼
+			* 컬럼의 값을 변형하지 않고 원래의 값을 이용해 인덱싱하는 알고리즘
 		* Hash 인덱스
+			* 컬럼의 값으로 해시 값을 계산해서 인덱싱
+			* 매우 빠른 검색 지원
+			* 단점
+				* 값을 변형해서 저장하므로, 전방(prefix) 일치와 같이 값의 일부만 검색하고자 할 때 사용할 수 없음
+			* 메모리 기반의 db 에서 주로 사용됨
+		* Fractal-Tree
+			* 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExODIxODI1NjksMTE4NzE2Njk5NywxMj
+eyJoaXN0b3J5IjpbLTIwNDQxMDg2MTgsMTE4NzE2Njk5NywxMj
 U1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
