RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -67,9 +67,15 @@
 				* 값을 변형해서 저장하므로, 전방(prefix) 일치와 같이 값의 일부만 검색하고자 할 때 사용할 수 없음
 			* 메모리 기반의 db 에서 주로 사용됨
 		* Fractal-Tree
+			* B-Tree의 단점을 보완하기 위해 고안됨
+			* 값을 변형하지 않고 인덱싱
+			* 데이터 저장/삭제 시 처리 비용을 줄이도록 설계됨
+	* 데이터 중복 허용 여부로 분류
+		* 유니크 인덱스 (Unique)
 			* 
+		* 유니크하지 않은 인덱스 (Non-Unique)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNDQxMDg2MTgsMTE4NzE2Njk5NywxMj
-U1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
+eyJoaXN0b3J5IjpbMTA0OTkxMzg2OCwxMTg3MTY2OTk3LDEyNT
+UwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
 -->
