RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -72,10 +72,15 @@
 			* 데이터 저장/삭제 시 처리 비용을 줄이도록 설계됨
 	* 데이터 중복 허용 여부로 분류
 		* 유니크 인덱스 (Unique)
-			* 
+			* 중복 여부 비허용
+			* DBMS 옵티마이저에게 같은 것만 찾으면 더 이상 찾지 않아도 된다는 것을 알려주는 효과가 있음
 		* 유니크하지 않은 인덱스 (Non-Unique)
+	* 인덱스의 기능별로 분류
+		* 전문 검색용
+		* 공간 검색용
+## 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA0OTkxMzg2OCwxMTg3MTY2OTk3LDEyNT
-UwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbLTE4MjQxMzM5MTEsMTE4NzE2Njk5NywxMj
+U1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
