RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -78,9 +78,15 @@
 	* 인덱스의 기능별로 분류
 		* 전문 검색용
 		* 공간 검색용
-## 
+## B-Tree 인덱스
+* 일반적으로 B+-Tree 또는 B*-Tree 가 사용됨
+* B 는 Binary 가 아니라 **Balanced** 임
+* 원래 값을 변형시키지 않음 (앞 부분만 잘라서 관리하기는 함)
+* 항상 정렬된 상태 유지
+* 전문 검색 시에는 적합하지 않음
+### 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MjQxMzM5MTEsMTE4NzE2Njk5NywxMj
-U1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
+eyJoaXN0b3J5IjpbMTgyMjI1NzY4MywxMTg3MTY2OTk3LDEyNT
+UwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
 -->
