--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -84,9 +84,16 @@
 * 원래 값을 변형시키지 않음 (앞 부분만 잘라서 관리하기는 함)
 * 항상 정렬된 상태 유지
 * 전문 검색 시에는 적합하지 않음
-### 
+### 구조 및 특성
+* 구조
+	* 최상위 Root Node 존재
+	* 하위에 자식 노드가 붙어 있는 구조
+	* 리프 노드 : 트리 최하위 노드
+	* 브렌치 노드 : 루트도 아니고 리프도 아닌 노드들
+* 인덱스와 실제 데이터가 저장된 데이터는 따로 관리됨
+* 인덱스의 리프 노드는 실제 데이터 레코드를 찾아가기 위한 주소값을 가지
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgyMjI1NzY4MywxMTg3MTY2OTk3LDEyNT
-UwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbNDE5NzgyOTU4LDExODcxNjY5OTcsMTI1NT
+A5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2MTEzXX0=
 -->
