RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -91,9 +91,10 @@
 	* 리프 노드 : 트리 최하위 노드
 	* 브렌치 노드 : 루트도 아니고 리프도 아닌 노드들
 * 인덱스와 실제 데이터가 저장된 데이터는 따로 관리됨
-* 인덱스의 리프 노드는 실제 데이터 레코드를 찾아가기 위한 주소값을 가지
+* 인덱스의 리프 노드는 실제 데이터 레코드를 찾아가기 위한 주소값을 가지고 있음
+* 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDE5NzgyOTU4LDExODcxNjY5OTcsMTI1NT
-A5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2MTEzXX0=
+eyJoaXN0b3J5IjpbMTg4MzAxODA4MiwxMTg3MTY2OTk3LDEyNT
+UwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
 -->
