RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -92,9 +92,10 @@
 	* 브렌치 노드 : 루트도 아니고 리프도 아닌 노드들
 * 인덱스와 실제 데이터가 저장된 데이터는 따로 관리됨
 * 인덱스의 리프 노드는 실제 데이터 레코드를 찾아가기 위한 주소값을 가지고 있음
-* 
-
+* ex) ![B-Tree 인덱스의 구조](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-04-19-00-22-33.jpeg)
+	* 인덱스의 키 값을 모두 정렬되어 있지만, 데이터 파일의 레코드는 정렬되어 있지 않음
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg4MzAxODA4MiwxMTg3MTY2OTk3LDEyNT
-UwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbODE5MDg0NDkyLDE4ODMwMTgwODIsMTE4Nz
+E2Njk5NywxMjU1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYx
+MTNdfQ==
 -->
