--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -94,8 +94,10 @@
 * 인덱스의 리프 노드는 실제 데이터 레코드를 찾아가기 위한 주소값을 가지고 있음
 * ex) ![B-Tree 인덱스의 구조](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-04-19-00-22-33.jpeg)
 	* 인덱스의 키 값을 모두 정렬되어 있지만, 데이터 파일의 레코드는 정렬되어 있지 않음
+	* **INSERT 순으로 저장되는 것 아님**
+	* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODE5MDg0NDkyLDE4ODMwMTgwODIsMTE4Nz
-E2Njk5NywxMjU1MDk1NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYx
-MTNdfQ==
+eyJoaXN0b3J5IjpbMjAyNjQwMzIwNywxODgzMDE4MDgyLDExOD
+cxNjY5OTcsMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2
+MTEzXX0=
 -->
