--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -95,9 +95,10 @@
 * ex) ![B-Tree 인덱스의 구조](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-04-19-00-22-33.jpeg)
 	* 인덱스의 키 값을 모두 정렬되어 있지만, 데이터 파일의 레코드는 정렬되어 있지 않음
 	* **INSERT 순으로 저장되는 것 아님**
+		* *UPDATE/ DELETE 없이 INSERT 만 수행한다면 순서대로 저장되는 것 맞음*
 	* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAyNjQwMzIwNywxODgzMDE4MDgyLDExOD
+eyJoaXN0b3J5IjpbLTg2Mzk3NTM5MiwxODgzMDE4MDgyLDExOD
 cxNjY5OTcsMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2
 MTEzXX0=
 -->
