--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -96,9 +96,9 @@
 	* 인덱스의 키 값을 모두 정렬되어 있지만, 데이터 파일의 레코드는 정렬되어 있지 않음
 	* **INSERT 순으로 저장되는 것 아님**
 		* *UPDATE/ DELETE 없이 INSERT 만 수행한다면 순서대로 저장되는 것 맞음*
-	* 
+		* 레코드가 삭제되어 빈 공간이 생기면 그 다음 INSERT는 삭제된 공간을 재활용하도록 DBMS 가 설계되어 있음
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg2Mzk3NTM5MiwxODgzMDE4MDgyLDExOD
-cxNjY5OTcsMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2
-MTEzXX0=
+eyJoaXN0b3J5IjpbOTAzODI0MTYsMTg4MzAxODA4MiwxMTg3MT
+Y2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjEx
+M119
 -->
