RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -97,8 +97,13 @@
 	* **INSERT 순으로 저장되는 것 아님**
 		* *UPDATE/ DELETE 없이 INSERT 만 수행한다면 순서대로 저장되는 것 맞음*
 		* 레코드가 삭제되어 빈 공간이 생기면 그 다음 INSERT는 삭제된 공간을 재활용하도록 DBMS 가 설계되어 있음
+
+> 참고
+> * 대부분의 RDBMS 의 데이터 파일에서 레코드는 특정 기준으로 정렬되지 않고 임의의 순서대로 저장됨
+> * InnoDB 테이블에서 레코드는 클러스터되어 디스크에 저장됨
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTAzODI0MTYsMTg4MzAxODA4MiwxMTg3MT
-Y2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjEx
-M119
+eyJoaXN0b3J5IjpbLTgzMTcyMDExNywxODgzMDE4MDgyLDExOD
+cxNjY5OTcsMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2
+MTEzXX0=
 -->
