RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -101,9 +101,12 @@
 > 참고
 > * 대부분의 RDBMS 의 데이터 파일에서 레코드는 특정 기준으로 정렬되지 않고 임의의 순서대로 저장됨
 > * InnoDB 테이블에서 레코드는 클러스터되어 디스크에 저장됨
+> 	* 기본적으로 프라이머리 키 순서대로 정렬되어 저장됨
+> 	* 오라클의 IOT, MS-SQL의 클러스터 테이블과 같은 구조
+> * 다른 DBMS에서는 클러스터링 기능이 선택 사항
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgzMTcyMDExNywxODgzMDE4MDgyLDExOD
-cxNjY5OTcsMTI1NTA5NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2
-MTEzXX0=
+eyJoaXN0b3J5IjpbODE4NTUzMTYsMTg4MzAxODA4MiwxMTg3MT
+Y2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjEx
+M119
 -->
