RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -105,8 +105,10 @@
 > 	* 오라클의 IOT, MS-SQL의 클러스터 테이블과 같은 구조
 > * 다른 DBMS에서는 클러스터링 기능이 선택 사항
 
+* 인덱스의 리프 노드와 데이터 파일의 관계
+	* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODE4NTUzMTYsMTg4MzAxODA4MiwxMTg3MT
-Y2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjEx
-M119
+eyJoaXN0b3J5IjpbLTE5NzQwMjk0MzcsMTg4MzAxODA4MiwxMT
+g3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2
+NjExM119
 -->
