RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -106,9 +106,10 @@
 > * 다른 DBMS에서는 클러스터링 기능이 선택 사항
 
 * 인덱스의 리프 노드와 데이터 파일의 관계
+	* ![B-Tree의 리프 노드와 테이블 데이터 레코드](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-04-19-00-36-15.jpeg)
 	* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NzQwMjk0MzcsMTg4MzAxODA4MiwxMT
-g3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYxOTI2NSwtMTA1OTU2
-NjExM119
+eyJoaXN0b3J5IjpbLTE3NjQyMDkyODgsLTE5NzQwMjk0MzcsMT
+g4MzAxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYx
+OTI2NSwtMTA1OTU2NjExM119
 -->
