RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -107,9 +107,14 @@
 
 * 인덱스의 리프 노드와 데이터 파일의 관계
 	* ![B-Tree의 리프 노드와 테이블 데이터 레코드](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-04-19-00-36-15.jpeg)
-	* 
+	* 레코드 주소
+		* DBMS 종류나 MySQL 의 스토리지 엔진에 따라 달라짐
+		* ex)
+			* 오라클 : 물리적인 레코드 주소
+			* MyISAM : 테이블에서 내부적인 레코드의 아이디(번호)를 의미
+			* InnoDB : pk에 의해 클러스터링 됨. 즉, pk
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NjQyMDkyODgsLTE5NzQwMjk0MzcsMT
-g4MzAxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1NzEsMTI5NDYx
-OTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbLTE0OTI2OTAwMiwtMTk3NDAyOTQzNywxOD
+gzMDE4MDgyLDExODcxNjY5OTcsMTI1NTA5NTU3MSwxMjk0NjE5
+MjY1LC0xMDU5NTY2MTEzXX0=
 -->
