--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -1,7 +1,7 @@
 
-# 인덱스
-## 디스크 읽기 방식
-### 저장 매체
+# 5. 인덱스
+## 5.1 디스크 읽기 방식
+### 5.1.1 저장 매체
 * 데이터를 저장할 수 있는 매체
 	* 내장 디스크
 	* DAS (Direct Attached Storage)
@@ -14,13 +14,13 @@
 		* 광케이블롸 컴퓨터 본체와 연결
 		* 여러 컴퓨터에서 접근 가능
 		* 빠르지만, 비용이 많이 듦
-### 디스크 드라이브와 솔리드 스테이트 드라이브 (SSD)
+### 5.1.2 디스크 드라이브와 솔리드 스테이트 드라이브 (SSD)
 * SSD
 	* 전자식 저장 매체
 	* 기존 기계식 저장 매체인 디스크 대체용
 	* DAS, SAN 에 그대로 이용 가능
 	* 랜덤 I/O 에서 특히 디스크보다 성능이 빠르다
-### 랜덤 I/O 와 순차 I/O
+### 5.1.3 랜덤 I/O 와 순차 I/O
 * 3개의 페이지 (16x3kb) 를 디스크에 기록하기 위해 
 	* 순차 I/O는 1번 시스템 콜 요청
 	* 랜덤 I/O 는 3번 요청
@@ -32,7 +32,7 @@
 > * 풀 테이블 스캔 : 순차 I/O 사용
 > * 큰 테이블의 레코드 대부분을 읽는 작업에서는 인덱스 사용하지 않고 풀 테이블 스캔을 사용하도록 유도할 때도 있음
 
-## 인덱스란?
+## 5.2 인덱스란?
 * 인덱스는 컬럼의 값을 주어진 순서로 미리 정렬하여 보관함
 * 비유
 	* sortedList
@@ -78,13 +78,13 @@
 	* 인덱스의 기능별로 분류
 		* 전문 검색용
 		* 공간 검색용
-## B-Tree 인덱스
+## 5.3 B-Tree 인덱스
 * 일반적으로 B+-Tree 또는 B*-Tree 가 사용됨
 * B 는 Binary 가 아니라 **Balanced** 임
 * 원래 값을 변형시키지 않음 (앞 부분만 잘라서 관리하기는 함)
 * 항상 정렬된 상태 유지
 * 전문 검색 시에는 적합하지 않음
-### 구조 및 특성
+### 5.3.1 구조 및 특성
 * 구조
 	* 최상위 Root Node 존재
 	* 하위에 자식 노드가 붙어 있는 구조
@@ -114,9 +114,12 @@
 			* MyISAM : 테이블에서 내부적인 레코드의 아이디(번호)를 의미
 			* InnoDB : pk에 의해 클러스터링 됨. 즉, pk 값 자체가 주소 역할
 	* **MySQL 테이블의 인덱스는 항상 인덱스 칼럼과 주소값의 조합으로 구성됨**
-### 
+### B-Tree 인덱스 키 추가 및 삭제
+* 레코드 저장/변경하는 경우 인덱스 키 추가나 삭제 작업이 발생
+#### 인덱스 키 추가
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NTIzOTcyMjgsLTE1NjM1MDcxNywtMT
-k3NDAyOTQzNywxODgzMDE4MDgyLDExODcxNjY5OTcsMTI1NTA5
-NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2MTEzXX0=
+eyJoaXN0b3J5IjpbOTUzMjgyMjkzLC0xNTYzNTA3MTcsLTE5Nz
+QwMjk0MzcsMTg4MzAxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1
+NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
 -->
