--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -114,12 +114,14 @@
 			* MyISAM : 테이블에서 내부적인 레코드의 아이디(번호)를 의미
 			* InnoDB : pk에 의해 클러스터링 됨. 즉, pk 값 자체가 주소 역할
 	* **MySQL 테이블의 인덱스는 항상 인덱스 칼럼과 주소값의 조합으로 구성됨**
-### B-Tree 인덱스 키 추가 및 삭제
+### 5.3.2 B-Tree 인덱스 키 추가 및 삭제
 * 레코드 저장/변경하는 경우 인덱스 키 추가나 삭제 작업이 발생
 #### 인덱스 키 추가
-* 
+* 바로 인덱스에 저장될 수도 있고 그렇지 않을 수도 있음
+* 저장될 위치 탐색
+	* B-Tree 에 저장될 때는 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTUzMjgyMjkzLC0xNTYzNTA3MTcsLTE5Nz
-QwMjk0MzcsMTg4MzAxODA4MiwxMTg3MTY2OTk3LDEyNTUwOTU1
-NzEsMTI5NDYxOTI2NSwtMTA1OTU2NjExM119
+eyJoaXN0b3J5IjpbLTI4ODg1MjY4MiwtMTU2MzUwNzE3LC0xOT
+c0MDI5NDM3LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1
+NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
