RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -119,9 +119,13 @@
 #### 인덱스 키 추가
 * 바로 인덱스에 저장될 수도 있고 그렇지 않을 수도 있음
 * 저장될 위치 탐색
-	* B-Tree 에 저장될 때는 
+	* B-Tree 에 저장될 때는 저장될 키값을 이용해 B-Tree 상의 적절한 위치 탐색
+	* 저장될 위치가 결정되면 레코드의 키값과 대상 레코드의 주소 정보를 B-Tree 의 리프 노드에 저장해야 함
+	* 리프노드가 꽉 찬 경우
+		* 리프 노드가 분리 (split) 되어야 함
+		* 상위 브렌치 노드까지 처리의 범위
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI4ODg1MjY4MiwtMTU2MzUwNzE3LC0xOT
+eyJoaXN0b3J5IjpbLTY5NjU4ODg5MCwtMTU2MzUwNzE3LC0xOT
 c0MDI5NDM3LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1
 NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
 -->
