RealMysql/5. 인덱스.md updated from https://stackedit.io/

--- a/RealMysql/5. 인덱스.md
+++ b/RealMysql/5. 인덱스.md
@@ -122,10 +122,13 @@
 	* B-Tree 에 저장될 때는 저장될 키값을 이용해 B-Tree 상의 적절한 위치 탐색
 	* 저장될 위치가 결정되면 레코드의 키값과 대상 레코드의 주소 정보를 B-Tree 의 리프 노드에 저장해야 함
 	* 리프노드가 꽉 찬 경우
-		* 리프 노드가 분리 (split) 되어야 함
-		* 상위 브렌치 노드까지 처리의 범위
+		* 리프 노드가 *분리 (split)* 되어야 함
+		* 상위 브렌치 노드까지 처리의 범위가 넒어짐
+	* 결론 : *B-Tree 는 상대적으로 쓰기 작업에 비용이 많이 듦*
+* 인덱스 추가로 인한 INSERT/UPDATE 문장이 받을 영향
+	* 계산 방법 : 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY5NjU4ODg5MCwtMTU2MzUwNzE3LC0xOT
-c0MDI5NDM3LDE4ODMwMTgwODIsMTE4NzE2Njk5NywxMjU1MDk1
-NTcxLDEyOTQ2MTkyNjUsLTEwNTk1NjYxMTNdfQ==
+eyJoaXN0b3J5IjpbLTEwNDIxNzE0NTIsLTE1NjM1MDcxNywtMT
+k3NDAyOTQzNywxODgzMDE4MDgyLDExODcxNjY5OTcsMTI1NTA5
+NTU3MSwxMjk0NjE5MjY1LC0xMDU5NTY2MTEzXX0=
 -->
